[gd_scene load_steps=12 format=3 uid="uid://cw0twtd575n66"]

[ext_resource type="Script" path="res://enemy/slasher/slasher.gd" id="1_iab3o"]
[ext_resource type="Texture2D" uid="uid://djdaaelwbpj1y" path="res://assets/enemy/enemy_attack.png" id="2_5x7of"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53te4"]
atlas = ExtResource("2_5x7of")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5oh7"]
atlas = ExtResource("2_5x7of")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d268t"]
atlas = ExtResource("2_5x7of")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5e1w"]
atlas = ExtResource("2_5x7of")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_atoyv"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_53te4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5oh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d268t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5e1w")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_6l0ao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attackIndicator:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_t7v6u"]
resource_name = "attack"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attackIndicator:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_72tf3"]
resource_name = "coll"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60j6h"]
_data = {
"RESET": SubResource("Animation_6l0ao"),
"attack": SubResource("Animation_t7v6u"),
"coll": SubResource("Animation_72tf3")
}

[node name="enemyAttack" type="Node2D"]
script = ExtResource("1_iab3o")

[node name="Area2D" type="Area2D" parent="." groups=["enemy_attack"]]
monitoring = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D" groups=["enemy_attack"]]
position = Vector2(-24, 1)
scale = Vector2(1, 0.7)
polygon = PackedVector2Array(11, -25.7143, 17, -34.2857, 25, -41.4286, 34, -34.2857, 38, -27.1429, 43, -15.7143, 40, -1.42857, 25, 7.14286, 6, -1.42857, 6, -15.7143)
disabled = true

[node name="new attack" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="new attack"]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_atoyv")
animation = &"attack"

[node name="attackIndicator" type="Sprite2D" parent="new attack"]
modulate = Color(0.647059, 0.188235, 0.188235, 0.733333)
self_modulate = Color(0.647059, 0.188235, 0.188235, 0.733333)
position = Vector2(0, -7)
texture = ExtResource("2_5x7of")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="new attack"]
libraries = {
"": SubResource("AnimationLibrary_60j6h")
}
autoplay = "attack"

[node name="killTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[connection signal="animation_finished" from="new attack/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="new attack/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="killTimer" to="." method="_on_kill_timer_timeout"]
